# python-mip-playground

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
src/: main.py
src/solver/: solve_problem.py
src/usecase/: usecase.py
