[tool.poetry]
name = "python-mip-playground"
version = "0.1.0"
description = ""
authors = ["Kaito Suzuki <snails8d@gmail.com>"]
readme = "README.md"
packages = [{include = "python_mip_playground"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.2"
mip = "1.14.0"
numpy = "^1.24.3"
opencv-python = "^4.7.0.72"
japanize-matplotlib = "^1.1.3"

unicorn = "^2.0.1.post1"
fastapi = "^0.96.0"

sphinx = "^7.0.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
